:wrench: fix layout problems

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -90,7 +90,7 @@ body {
 
 .wrapper > .main {
   width: $width - 302px;
-  margin: 175px auto 0 auto;
+  margin: 125px auto 0 auto;
   position: relative;
 }
 
@@ -111,7 +111,7 @@ body {
     display: inline-block;
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.15);
     border-radius: 36px;
-    padding: 24px 84px;
+    padding: 24px 0;
     font-size: 36px;
     color: #fff;
     z-index: 2;
